Portfolio website challenge

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                     <ul>
                         <!-- Links to my accounts so employeer's can review me. -->
                         <li>
-                            <a href="https://github.com/bzoulko">GitHub</a>
-                            <a href="https://www.linkedin.com/in/brian-zoulko-753810240?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bc3GDST0qT3G4bQVo5QVuzw%3D%3D">LinkedIn</a>
-                            <a href="https://indeed.com">Indeed</a>
+                            <a href="https://github.com/bzoulko" target="_blank">GitHub</a>
+                            <a href="https://www.linkedin.com/in/brian-zoulko-753810240?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bc3GDST0qT3G4bQVo5QVuzw%3D%3D" target="_blank">LinkedIn</a>
+                            <a href="https://indeed.com" target="_blank">Indeed</a>
                         </li>
                     </ul>
                 </nav>     
