Portfolio website challenge

--- a/index.html
+++ b/index.html
@@ -74,10 +74,25 @@
                 <div class="work-area">
 
                     <!-- Place holder images for future links to web-sites or web-designs that I've done. -->
-                    <img class="cell-c1-r1 cell-highlight" title="PlaceHolder #1" src="./images/placeholder.png" alt="Portfolio image" style="width:25%">
-                    <img class="cell-c1-r2 cell-highlight" title="PlaceHolder #2" src="./images/placeholder.png" alt="Portfolio image" style="width:25%">
-                    <img class="cell-c2-r1 cell-highlight" title="PlaceHolder #3" src="./images/placeholder.png" alt="Portfolio image" style="width:25%">
-                    <img class="cell-c2-r2 cell-highlight" title="PlaceHolder #4" src="./images/placeholder.png" alt="Portfolio image" style="width:25%">
+                    <div class="cell-c1-r1 cell-highlight" title="PlaceHolder #1" >
+                        <img src="./images/placeholder.png" alt="Portfolio image" style="width:25%">
+                        <p >PlaceHolder #1</p>
+                    </div>
+
+                    <div class="cell-c1-r2 cell-highlight" title="PlaceHolder #2" >
+                    <img src="./images/placeholder.png" alt="Portfolio image" style="width:25%">
+                    <p>PlaceHolder #2</p>
+                    </div>
+
+                    <div class="cell-c2-r1 cell-highlight" title="PlaceHolder #3" >
+                        <img src="./images/placeholder.png" alt="Portfolio image" style="width:25%">
+                        <p>PlaceHolder #3</p>
+                    </div>
+
+                    <div class="cell-c2-r2 cell-highlight" title="PlaceHolder #4" >
+                        <img src="./images/placeholder.png" alt="Portfolio image" style="width:25%">
+                        <p>PlaceHolder #4</p>
+                    </div>
 
                 </div>
             </div>
